# arm_6dof

./: .gitignore  README.md  keys.pub
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_msgs/include/arm_msgs/arm_msgs/msg/: motor_command.h  motor_command.hpp  motor_mit_cmd_tau.h  motor_mit_cmd_tau.hpp  motor_state.h  motor_state.hpp  robot_command.h  robot_command.hpp  robot_mit_cmd_tau.h  robot_mit_cmd_tau.hpp  robot_state.h  robot_state.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/arm_msgs/include/arm_msgs/arm_msgs/msg/detail/: motor_command__builder.hpp  motor_command__functions.h  motor_command__rosidl_typesupport_fastrtps_c.h  motor_command__rosidl_typesupport_fastrtps_cpp.hpp  motor_command__rosidl_typesupport_introspection_c.h  motor_command__rosidl_typesupport_introspection_cpp.hpp  motor_command__struct.h  motor_command__struct.hpp  motor_command__traits.hpp  motor_command__type_support.h  motor_command__type_support.hpp  motor_mit_cmd_tau__builder.hpp  motor_mit_cmd_tau__functions.h  motor_mit_cmd_tau__rosidl_typesupport_fastrtps_c.h  motor_mit_cmd_tau__rosidl_typesupport_fastrtps_cpp.hpp  motor_mit_cmd_tau__rosidl_typesupport_introspection_c.h  motor_mit_cmd_tau__rosidl_typesupport_introspection_cpp.hpp  motor_mit_cmd_tau__struct.h  (+48 more)
install/arm_msgs/share/ament_index/resource_index/package_run_dependencies/: arm_msgs
install/arm_msgs/share/ament_index/resource_index/parent_prefix_path/: arm_msgs
install/arm_msgs/share/ament_index/resource_index/rosidl_interfaces/: arm_msgs
install/arm_msgs/share/arm_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm_msgs/share/arm_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  arm_msgsConfig-version.cmake  arm_msgsConfig.cmake  arm_msgs__rosidl_typesupport_cExport-noconfig.cmake  export_arm_msgs__rosidl_generator_cExport.cmake  export_arm_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_arm_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_arm_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/arm_msgs/share/arm_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/arm_msgs/share/arm_msgs/msg/: MotorCommand.idl  MotorCommand.msg  MotorMitCmdTau.idl  MotorMitCmdTau.msg  MotorState.idl  MotorState.msg  RobotCommand.idl  RobotCommand.msg  RobotMitCmdTau.idl  RobotMitCmdTau.msg  RobotState.idl  RobotState.msg
install/nb_arm/lib/nb_arm/: arm_control_sim_node  arm_main_node
install/nb_arm/share/ament_index/resource_index/package_run_dependencies/: nb_arm
install/nb_arm/share/ament_index/resource_index/parent_prefix_path/: nb_arm
install/nb_arm/share/nb_arm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nb_arm/share/nb_arm/cmake/: nb_armConfig-version.cmake  nb_armConfig.cmake
install/nb_arm/share/nb_arm/environment/: ament_prefix_path.dsv  path.dsv
install/nb_arm/share/nb_arm/launch/: arm_control_sim.launch.py  position_control.launch.py
install/nb_arm/share/nb_arm/rviz/: arm_sim.rviz
install/nb_arm/share/nb_arm/urdf/: first_robot.urdf  ur5.urdf
log/: latest_build
src/arm_msgs/: CMakeLists.txt
src/nb_arm/: CMakeLists.txt
src/nb_arm/include/nb_arm/: arm_main_node.hpp
src/nb_arm/include/nb_arm/controllers/: arm_control.hpp  arm_control_sim.hpp  controller.hpp
src/nb_arm/include/nb_arm/drivers/: motor_driver.hpp
src/nb_arm/include/nb_arm/mathematical_model/: nb_arm_xdof.hpp
src/nb_arm/include/nb_arm/path/: trajectory_generator.hpp
src/nb_arm/include/nb_arm/protocol/: damiao.h  usb_class.h
src/nb_arm/launch/: arm_control_sim.launch.py  position_control.launch.py
src/nb_arm/rviz/: arm_sim.rviz
src/nb_arm/src/controllers/: arm_control.cpp  arm_control_sim.cpp  controller.cpp
src/nb_arm/src/drivers/: motor_driver.cpp
src/nb_arm/src/mathematical_model/: nb_arm_xdof.cpp
src/nb_arm/src/nodes/: arm_control_sim_node.cpp  arm_main_node.cpp
src/nb_arm/src/path/: trajectory_generator.cpp
src/nb_arm/src/protocol/: damiao.cpp
(+21 files in other folders)
